// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListItemsForm /> renders create list item 1`] = `
<form
  id="frm-list-item"
  onSubmit={[Function]}
>
  <React.Fragment>
    <styled.h3>
      Creating list item for : 
    </styled.h3>
    <styled.h3
      title="Disposition Code List"
    >
      Disposition Code List
    </styled.h3>
  </React.Fragment>
  <styled.div>
    <InputField
      componentType="input"
      data-automation="Test Field Item Name 1Input"
      dataType="string"
      disabled={false}
      id="frm-list-item-Test Field Item Name 1"
      key="Test Field Item Name 1"
      label="Test Field Item Label 1"
      name="Test Field Item Name 1"
    />
    <InputField
      componentType="input"
      data-automation="Test Field Item Name 1Input"
      dataType="number"
      disabled={false}
      id="frm-list-item-Test Field Item Name 1"
      key="Test Field Item Name 1"
      label="Test Field Item Label 1"
      name="Test Field Item Name 1"
    />
    <SelectField
      data-automation="Test Field Item Name 1List"
      disabled={false}
      id="frm-list-item-Test Field Item Name 1"
      key="Test Field Item Name 1"
      label="Test Field Item Label 1"
      name="Test Field Item Name 1"
      options="boolean"
      required={false}
    />
  </styled.div>
  <SidePanelActions
    bulkItemsAffected={0}
    hideCancel={false}
    hideSubmit={false}
    invalid={false}
    isSaving={false}
    onCancel={[Function]}
    pristine={false}
    selectedEntityId=""
  />
</form>
`;

exports[`<ListItemsForm /> renders update list item 1`] = `
<form
  id="frm-list-item"
  onSubmit={[Function]}
>
  <React.Fragment>
    <styled.h3>
      Updating list item : 
    </styled.h3>
    <styled.h3
      title="Angry Customer"
    >
      Angry Customer
    </styled.h3>
  </React.Fragment>
  <styled.div>
    <InputField
      componentType="input"
      data-automation="Test Field Item Name 1Input"
      dataType="string"
      disabled={false}
      id="frm-list-item-Test Field Item Name 1"
      key="Test Field Item Name 1"
      label="Test Field Item Label 1"
      name="Test Field Item Name 1"
    />
    <InputField
      componentType="input"
      data-automation="Test Field Item Name 1Input"
      dataType="number"
      disabled={false}
      id="frm-list-item-Test Field Item Name 1"
      key="Test Field Item Name 1"
      label="Test Field Item Label 1"
      name="Test Field Item Name 1"
    />
    <SelectField
      data-automation="Test Field Item Name 1List"
      disabled={false}
      id="frm-list-item-Test Field Item Name 1"
      key="Test Field Item Name 1"
      label="Test Field Item Label 1"
      name="Test Field Item Name 1"
      options="boolean"
      required={false}
    />
  </styled.div>
  <SidePanelActions
    bulkItemsAffected={0}
    hideCancel={false}
    hideSubmit={false}
    invalid={false}
    isSaving={false}
    onCancel={[Function]}
    pristine={false}
    selectedEntityId=""
  />
</form>
`;
